problem evaulator implemented; application context - Main bean removed